# sendy

./: Cargo.toml  LICENSE  README.md
src/: leader.rs  main.rs  sender.rs
